# LR-BCD

./: CMakeLists.txt  README  README.md
benchmark/: rd100-10-dense-0.wcsp  rd100-10-dense-1.wcsp  rd100-10-dense-2.wcsp  rd100-10-dense-3.wcsp  rd100-10-dense-4.wcsp  rd100-10-dense-5.wcsp  rd100-10-dense-6.wcsp  rd100-10-dense-7.wcsp  rd100-10-dense-8.wcsp  rd100-10-dense-9.wcsp  rd100-10-sparse-0.wcsp  rd100-10-sparse-1.wcsp  rd100-10-sparse-2.wcsp  rd100-10-sparse-3.wcsp  rd100-10-sparse-4.wcsp  rd100-10-sparse-5.wcsp  rd100-10-sparse-6.wcsp  rd100-10-sparse-7.wcsp  rd100-10-sparse-8.wcsp  rd100-10-sparse-9.wcsp  rd100-3-dense-0.wcsp  rd100-3-dense-1.wcsp  rd100-3-dense-2.wcsp  rd100-3-dense-3.wcsp  rd100-3-dense-4.wcsp  rd100-3-dense-5.wcsp  rd100-3-dense-6.wcsp  rd100-3-dense-7.wcsp  rd100-3-dense-8.wcsp  rd100-3-dense-9.wcsp  rd100-3-sparse-0.wcsp  rd100-3-sparse-1.wcsp  rd100-3-sparse-2.wcsp  rd100-3-sparse-3.wcsp  rd100-3-sparse-4.wcsp  rd100-3-sparse-5.wcsp  rd100-3-sparse-6.wcsp  rd100-3-sparse-7.wcsp  rd100-3-sparse-8.wcsp  rd100-3-sparse-9.wcsp  (+40 more)
code/: makefile  mixing.cpp  wcsp.cpp  wcsp.h  wcspfun.cpp  wcspfun.h  wcspreader.hh  wcspvar.cpp  wcspvar.h
src/: lrbcd.cpp  solution.cpp  wcsp.cpp  wcsp.h  wcspfun.cpp  wcspvar.cpp
